correct a case in IME where hitting backspace after finishing composition would seep through up the responder chain. (bug 181198)